--- a/subscription_form/public/style.css
+++ b/subscription_form/public/style.css
@@ -21,3 +21,14 @@
 #subscribers_list tr:first-child {
   background: rgb(149, 209, 236);
 }
+
+#blog_posts {
+  display: flex;
+  flex-direction: column;
+}
+
+#blog_posts > a {
+  padding: 10px;
+  margin: 5px;
+  background: rgba(0, 139, 139, 0.37);
+}
